@@ -12,29 +12,27 @@ JACKSON_ANNOTATION="$HOME/.m2/repository/com/fasterxml/jackson/core/jackson-anno
 JSON_JAR="$HOME/.m2/repository/org/json/json/20240303/json-20240303.jar"
 SLF4J_JAR="$HOME/.m2/repository/org/slf4j/slf4j-api/2.0.13/slf4j-api-2.0.13.jar"
 
-./compileJar.sh
-
-# Copie toutes les dépendances dans dist/ pour jpackage
-cp "$JSOUP_JAR" "$JAVAFX_CONTROLS" "$JAVAFX_BASE" "$JAVAFX_GRAPHICS" "$JAVAFX_FXML" "$JACKSON_CORE" "$JACKSON_DATABIND" "$JACKSON_ANNOTATION" "$JSON_JAR" "$SLF4J_JAR" dist/
-
-# Execute l'application, pour savoir si elle peut compiler avec jpackage
-echo "---------------------------"
-echo "Test manuel de lancement..."
-echo "Pour sortir de l'application
-      et continuer le build, veuiller
-      presser CTRL + C dans la console
-      et non juste fermer l'application."
+BUILD_DIR="build_main"
+JAR_NAME="webscrapper.jar"
 MAIN_CLASS="com.example.scraper.ui.MainApp"
-#java --module-path dist --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics -cp "dist/*" $MAIN_CLASS
-echo "--------TERMINATED---------"
-echo "Compiling app..."
-sudo rm -r WebScrapper
 
-jpackage \
-  --type app-image \
-  --input dist \
-  --main-jar webscrapper.jar \
-  --main-class com.example.scraper.ui.MainApp \
-  --name WebScrapper \
-  --module-path "dist" \
-  --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics
+# Variable d'environnement pour mon Java, sachant que mon Java par défaut n'est pas le java demandé (Java21)
+export JAVA_HOME="$HOME/.jdks/ms-21.0.7"
+export PATH="$JAVA_HOME/bin:$PATH"
+
+mkdir -p "$BUILD_DIR"
+
+# Compilation avec toutes les sources principales
+find src/main/java -name "*.java" > sources.txt
+javac -d "$BUILD_DIR" -cp "$JSOUP_JAR:$JAVAFX_CONTROLS:$JAVAFX_BASE:$JAVAFX_GRAPHICS:$JACKSON_CORE:$JACKSON_DATABIND:$JACKSON_ANNOTATION:$JSON_JAR:$SLF4J_JAR" @sources.txt
+
+# Création du manifest pour indiquer la classe principale
+echo "Main-Class: $MAIN_CLASS" > "$BUILD_DIR/manifest.txt"
+
+# Création du JAR exécutable
+cd "$BUILD_DIR"
+jar cfm "../dist/$JAR_NAME" manifest.txt com/
+cd ..
+
+# Nettoyage
+rm -rf "$BUILD_DIR" sources.txt
